# v1.0.2.2 - 2025-10-04
- Fixed size calculation in shared memory mapping to use reserved_info struct
- Added server-client shared memory test case

# v1.0.2.1 - 2025-10-01
- Fixed buffer wrap read logic to properly retry from wrapped position
- Improved reader behavior when encountering wrap jump markers
- Changed to C++20

# v1.0.2.0 - 2025-09-29
- Handles buffer wrap properly
- Refactor to use reserved_info struct for better buffer management
- Add buffer wrap test case

# v1.0.1.2 - 2025-09-23
- Fixed dist_slick_queue might cause third-party dependency installation error in release build

# v1.0.1.1 - 2025-09-20
- Add WIN32_LEAN_AND_MEAN

# v1.0.1.0 - 2025-09-12
- Change organization name 

# v1.0.0.2 - 2025-08-30
- Change the installation directory

# v1.0.0.1 - 2025-08-30
- Add comprehensive documentation to SlickQueue class
- Minor fix: corrected size() method to return size_ instead of mask_ + 1